# discordbot

./: .dockerignore  Dockerfile  README.md  RESTRUCTURE_SUMMARY.md  application.yml  bot.py  docker-compose.yml  entrypoint.sh  env.example  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-app.yml
cogs/: admin.py  greetings.py
cogs/admin/: admin.py  config.py
cogs/music/: README.md  audio_controller.py  controller.py  extractor.py  manager.py  music.py  music_cog.py  search.py
cogs/music/core/: background_playlist_loader.py  models.py  playlist.py  song.py  track_resolver_worker.py
cogs/music/core/player/: music_player.py
cogs/music/services/: youtube_service.py
cogs/music/services/soundcloud/: service.py
cogs/music/utils/: queue_utils.py
cogs/music/view/: view.py
cogs/tts/: tts.py
core/: error_handler.py  settings_manager.py
mapper/: __init__.py
patterns/: __init__.py
utils/: __init__.py  cache_utils.py  config_manager.py  env_loader.py  health_monitor.py  logging_utils.py  monitoring.py  network_utils.py  opus_loader.py  performance_optimizer.py  resource_manager.py  sharding_manager.py  voice_helpers.py
