[project]
name = "discordbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "discord>=2.3.2",
    "discord-py[voice]>=2.4.0",
    "gtts>=2.5.4",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "speedtest-cli>=2.1.3",
    "urllib3>=2.3.0",
    "wavelink>=3.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
